--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/react-dom": "16.8.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "superagent": "^4.1.0",
     "typescript": "3.3.3333"
@@ -29,6 +31,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react-router": "^4.4.4",
+    "@types/react-router-dom": "^4.3.1",
     "@types/superagent": "^4.1.0"
   }
 }
